<resources>
    <string name="app_name">RideApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="sign_out">Sign Out</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>

    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="status_sign_in_failed">Sign-in failed</string>

    <string name="signed_in">Signed In</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_event">My Event</string>
    <string name="tab_text_leaving_group">Leaving Group</string>
    <string name="tab_text_company">Company</string>
    <string name="action_settings">Settings</string>
    <string name="action_create_temp_events">New Event</string>
    <string name="action_event_details_driver">Event Details Driver</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable Diary</string>
    <string name="pref_description_diary">use rafael diary
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_driver">Driver Or Passenger</string>
    <string-array name="pref_example_list_titles">
        <item>Driver</item>
        <item>Passenger</item>

    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>

    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_driver">Driver</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="tab_text_driver">Driver</string>
    <string name="tab_text_passenger">Passenger</string>
    <string name="action_event_details_passenger">Event Passenger Details</string>
    <string name="action_event_create">Create Event</string>

</resources>
