<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mile.android.activity.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/action_create_temp_event"
        android:orderInCategory="101"
        android:title="@string/action_create_temp_events"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_event_details_driver"
        android:orderInCategory="102"
        android:title="@string/action_event_details_driver"
        app:showAsAction="never" />
    <item
    android:id="@+id/action_event_details_passenger"
    android:orderInCategory="102"
    android:title="@string/action_event_details_passenger"
    app:showAsAction="never" />
    <item
        android:id="@+id/action_event_create"
        android:orderInCategory="102"
        android:title="@string/action_event_create"
        app:showAsAction="never" />

</menu>
